--- a/src/components/Options/styles.scss
+++ b/src/components/Options/styles.scss
@@ -1,6 +1,6 @@
-@import "../styles/fonts";
-@import "../styles/reset";
-@import "../styles/variables";
+@import "../../styles/fonts";
+@import "../../styles/reset";
+@import "../../styles/variables";
 
 @import "~webext-base-css/webext-base.css";
 
