--- a/src/components/PopupWrapper/styles.scss
+++ b/src/components/PopupWrapper/styles.scss
@@ -1,7 +1,6 @@
 @import "../../styles/variables";
 
-.popup-window {
+.popup-wrapper {
   min-width: 350px;
-  padding: 30px 20px;
-  background-color: grey;
+  background-color: $popup-background;
 }
