--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,23 +1,11 @@
-// colors
-$black: #0d0d0d;
-$greyWhite: #f3f3f3;
-$skyBlue: #8892b0;
+// base colors
+$grey-20: #ededf0;
+$grey-30: #d7d7db;
+$grey-40: #b1b1b3;
+$grey-60: #4a4a4f;
+$grey-90: #0c0c0d;
 
-// fonts
-$nunito: "Nunito", sans-serif;
-
-// font weights
-$thin: 100;
-$exlight: 200;
-$light: 300;
-$regular: 400;
-$medium: 500;
-$semibold: 600;
-$bold: 700;
-$exbold: 800;
-$exblack: 900;
-
-// other variables
-.d-none {
-  display: none !important;
-}
+// mapped colors
+$popup-background: $grey-60;
+$popup-toolbar-background: $grey-90;
+$popup-toolbar-icon: $grey-20;
