--- a/views/popup.html
+++ b/views/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=500" />
     <title>Popup</title>
