--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,8 +11,12 @@ $popup-toolbar-icon: $grey-20;
 
 $popup-background: $grey-40;
 
-$list-link-button-backround: $grey-60;
+$list-link-button-background: $grey-60;
 $list-link-button-content: $grey-20;
+
+$options-background: $grey-40;
+$options-foreground: $grey-60;
+$options-text: $grey-20;
 
 // global scss variables
 $button-cursor: pointer;
