--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,11 @@
 // base colors
+$white: #fff;
+$off-white: #f6f8fa;
+
+$dark-grey: #24292e;
+$blue: #0366d6;
+$black: #24292e;
+
 $grey-20: #ededf0;
 $grey-30: #d7d7db;
 $grey-40: #b1b1b3;
@@ -6,17 +13,17 @@ $grey-60: #4a4a4f;
 $grey-90: #0c0c0d;
 
 // mapped colors
-$popup-toolbar-background: $grey-90;
-$popup-toolbar-icon: $grey-20;
+$popup-toolbar-background: $dark-grey;
+$popup-toolbar-icon: $white;
 
-$popup-background: $grey-40;
+$popup-background: $off-white;
 
-$list-link-button-background: $grey-60;
-$list-link-button-content: $grey-20;
+$list-link-button-background: $white;
+$list-link-button-content: $blue;
 
-$options-background: $grey-40;
-$options-foreground: $grey-60;
-$options-text: $grey-20;
+$options-background: $off-white;
+$options-foreground: $white;
+$options-text: $black;
 
 // global scss variables
 $button-cursor: pointer;
