Update options shadow

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,6 +25,7 @@ $status-failure: $red;
 
 $options-background: $off-white;
 $options-foreground: $white;
+$options-shadow: $black;
 $options-text: $black;
 
 // global scss variables
