--- a/src/components/Options/styles.scss
+++ b/src/components/Options/styles.scss
@@ -13,7 +13,7 @@ body {
   margin: 8px 16px;
   padding: 24px;
   text-align: center;
-  box-shadow: 0px 8px 8px $options-foreground;
+  box-shadow: 0px 8px 8px $options-shadow;
   min-height: 100;
   background-color: $options-foreground;
 }
